--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,25 @@ body {
     font-family: 'Roboto Mono', monospace;
 }
 
+#top{
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px ;
+}
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /*align-content:center;*/
+    width: 50%;
+}
+.nav-bar {
+    background-color: pink  ;
+}
+nav ul li {
+    display: inline-block;
+    margin: 25px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    justify-content: space-between;
+    }
